--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -1,11 +1,26 @@
 .blog {
-    text-align: center;
-  }
-  .blog > h2 {
-    font-size: 3em;
-    margin-top: 80px;
-  }
-  .blog > h3 {
-    font-size: 2em;
-    font-weight: 400;
-  }
+  text-align: center;
+}
+.blog > h2 {
+  font-size: 3em;
+  margin-top: 80px;
+}
+.blog > h3 {
+  font-size: 2em;
+  font-weight: 400;
+}
+.b_item {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 80px;
+  margin: 80px 20px;
+}
+.b_item h3 {
+  text-align: center;
+  margin: 20px auto 0px;
+  font-weight: 500;
+}
+.b_item p {
+  color: #ccc;
+  margin-top: 4px;
+}
